--- a/multi.html
+++ b/multi.html
@@ -16,7 +16,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   
   </head>
-  <body>
+  <body id="body">
     <div class="appPanel" id="prog-one" style="background-color: #eee; padding-bottom: 10px"></div>
     <div class="appPanel" id="prog-two"></div>
     <!--<script type="text/javascript">//Elm.Main.fullscreen()</script>-->
